CRUD de desenvolvedores

--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@
 ENVIROMENT=prod
 
 # Github public api
-GITHUB_API_URL=https://api.github.com/
+GITHUB_API_URL=https://api.github.com
 
 # Mongo db access prod
 MONGODB_PROTOCOL=mongodb+srv://
